# dbagath

./: .replit  pyproject.toml  remote12.txt  test1.txt  test2.txt
Python3/: ExceptionHandling.py  artist-names.csv  content.csv  csvparser.py  decorators.py  factorial.py  fibonacci.py  filehandling.py  fileinputexample.py  gettersetter.py  listtupledict.py  mapandreduce.py  randomprgm.py  regex.py  reversestring.py  sampleclass.py  schemaexample.py  snmpv2.py  snmpv3.py  splitstring.py  strings.py  subprocessexample.py  sumofdigits.py  test.json  xmlparser.py
Python3/testpkga/: __init__.py  testa.py  testb.py
Python3/testpkga/testpkgb/: testba.py  testbb.py
