[tool.poetry]
name = "repl_python3_dbagath-2"
version = "0.1.0"
description = ""
authors = ["dbagath <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pysnmp = "^4.4.12"
schema = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
